@@ -1,0 +1,18 @@
+## Emacs, make this -*- mode: sh; -*-
+
+FROM r-base:latest
+
+LABEL org.label-schema.license="GPL-2.0" \
+      org.label-schema.vcs-url="https://github.com/eddelbuettel/rquantlib" \
+      maintainer="Dirk Eddelbuettel <edd@debian.org>"
+
+RUN apt-get update \
+	&& apt-get install -y --no-install-recommends \
+		r-cran-rcpp \
+                r-cran-zoo \
+                r-cran-runit \
+		libquantlib0-dev \
+        && mkdir ~/.R \
+        && echo _R_CHECK_FORCE_SUGGESTS_=FALSE > ~/.R/check.Renviron
+
+CMD ["bash"]
